feat:优化缓存管理